--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
   <h1>My Schedule Today</h1>
   <ol>
-    <li>Period 1 is AAAA </li>
-    <li>Period 2 is BBBB </li>
-    <li>Period 3 is CCCC </li>
-    <li>Period 4 is DDDD </li>  
-    <li>Period 5 is EEEE </li>  
-    <li>Period 6 is FFFF </li>  
-    <li>Period 7 is GGGG </li>  
-    <li>Period 8 is HHHH </li>  
-    <li>Period 9 is JJJJ </li>  
-    <li>Period 10 is KKKK </li>  
+    <li>Period 1 is free period </li>
+    <li>Period 2 is  participation in government and economics </li>
+    <li>Period 3 is Web development </li>
+    <li>Period 4 is physical education </li>  
+    <li>Period 5 is Ap psycology </li>  
+    <li>Period 6 is film literature</li>  
+    <li>Period 7 is Lunch </li>  
+    <li>Period 8 is Art history </li>  
+    <li>Period 9 is Architecture </li>  
+    <li>Period 10 is Architecture </li>  
   </ol>
 
   
